# ticker-bot

./: .gitignore  Cargo.toml  README.md
local-interchaintest/: Cargo.toml
local-interchaintest/chains/: neutron_gaia.json
local-interchaintest/src/: main.rs
local-interchaintest/src/utils/: constants.rs  file_system.rs  liquid_staking.rs  mod.rs  queries.rs  setup.rs  stride.rs  test_context.rs  types.rs
local-interchaintest/wasms/valence/: valence_astroport_liquid_pooler.wasm  valence_clock.wasm  valence_covenant_single_party_pol.wasm  valence_ibc_forwarder.wasm  valence_interchain_router.wasm  valence_remote_chain_splitter.wasm  valence_single_party_pol_holder.wasm  valence_stride_liquid_staker.wasm
ticker-bot/: Cargo.toml  config.toml  mnemonic.key
ticker-bot/src/: client.rs  config.rs  contract.rs  lib.rs  main.rs  wallet.rs
