[package]
name = "local-ictest-e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
localic-std = { git = "https://github.com/strangelove-ventures/interchaintest", branch = "main" }
cosmwasm-std = "1.5.5"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde_json = { version = "1.0.117" }
serde = { version = "1.0.203", features = ["derive"] }
sha2 = "0.10.8"

astroport = { git = "https://github.com/astroport-fi/astroport-core.git", rev = "700f66d" }
localic-utils = { git = "https://github.com/timewave-computer/localic-utils", branch = "main" }
valence-covenant-single-party-pol = { git = "https://github.com/timewave-computer/covenants", branch = "keyne/permissionless-tick" }
valence-astroport-liquid-pooler = { git = "https://github.com/timewave-computer/covenants", branch = "keyne/permissionless-tick" }
covenant-utils = { git = "https://github.com/timewave-computer/covenants", branch = "keyne/permissionless-tick" }
ticker-bot = { path = "../ticker-bot" }
toml = "0.8.14"
cw20 = { version = "0.15.1" }
cw-utils = "1.0.3"
log = "0.4.22"
env_logger = "0.11.3"
anyhow = "1.0.86"
